# mc-rtc-tutorial-logging

./: .gitignore  CMakeLists.txt  LICENSE  README.md
etc/: TutorialLogging.in.yaml
presentation/: Makefile  presentation.tex
src/: CMakeLists.txt  TutorialLogging.cpp  TutorialLogging.h  api.h  lib.cpp
src/plugins/: CMakeLists.txt  Joystick.cpp  Joystick.h  JoystickState.h
src/states/: CMakeLists.txt  Initial.cpp  Initial.h  Joystick.cpp  Joystick.h  TutorialLogging_Initial.cpp  TutorialLogging_Initial.h
